# open_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: mpc_dummy_params.yaml
extern_lib/: README.md
include/: open_optimizer.hpp
launch/: mpc_dummy_optimizer.launch  open_optimizer.launch
msg/: OptimisationParameters.msg  OptimisationResult.msg
ros1/: package.xml
ros1/config/: open_params.yaml
ros1/src/: open_optimizer.cpp
ros2/: CMakeLists.txt  README.md  package.xml
ros2/config/: open_params.yaml
ros2/include/: open_optimizer.hpp  rosenbrock_ros2_bindings.hpp
ros2/launch/: open_optimizer.launch.py
ros2/src/: open_optimizer.cpp
scripts/: rosenbrock_codegen.py
src/: open_optimizer.cpp  rosenbrock_bindings.hpp  talker.cpp
