<?xml version="1.0"?>
<package format="2">
  <name>parametric_optimizer</name>
  <version>0.1.1</version>
  <description>cool ROS node</description>
  <maintainer email="maintainer-email@todo.todo">chung</maintainer>
  <license>LGPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Messages -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export></export>
</package>